@@ -5340,6 +5340,141 @@ literal|"/response/docs/[0]=={'a':1, 'b':2.0,'c':'X','d':'A'}"
 argument_list|)
 expr_stmt|;
 block|}
+DECL|method|testMissingFieldFunctionBehavior
+specifier|public
+name|void
+name|testMissingFieldFunctionBehavior
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|clearIndex
+argument_list|()
+expr_stmt|;
+comment|// add a doc that has no values in any interesting fields
+name|assertU
+argument_list|(
+name|adoc
+argument_list|(
+literal|"id"
+argument_list|,
+literal|"1"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertU
+argument_list|(
+name|commit
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// it's important that these functions not only use fields that
+comment|// out doc have no values for, but also that that no other doc ever added
+comment|// to the index might have ever had a value for, so that the segment
+comment|// term metadata doesn't exist
+for|for
+control|(
+name|String
+name|suffix
+range|:
+operator|new
+name|String
+index|[]
+block|{
+literal|"s"
+block|,
+literal|"b"
+block|,
+literal|"dt"
+block|,
+literal|"tdt"
+block|,
+literal|"i"
+block|,
+literal|"l"
+block|,
+literal|"f"
+block|,
+literal|"d"
+block|,
+literal|"pi"
+block|,
+literal|"pl"
+block|,
+literal|"pf"
+block|,
+literal|"pd"
+block|,
+literal|"ti"
+block|,
+literal|"tl"
+block|,
+literal|"tf"
+block|,
+literal|"td"
+block|}
+control|)
+block|{
+specifier|final
+name|String
+name|field
+init|=
+literal|"no__vals____"
+operator|+
+name|suffix
+decl_stmt|;
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"id:1"
+argument_list|,
+literal|"fl"
+argument_list|,
+literal|"noval_if:if("
+operator|+
+name|field
+operator|+
+literal|",42,-99)"
+argument_list|,
+literal|"fl"
+argument_list|,
+literal|"noval_def:def("
+operator|+
+name|field
+operator|+
+literal|",-99)"
+argument_list|,
+literal|"fl"
+argument_list|,
+literal|"noval_not:not("
+operator|+
+name|field
+operator|+
+literal|")"
+argument_list|,
+literal|"fl"
+argument_list|,
+literal|"noval_exists:exists("
+operator|+
+name|field
+operator|+
+literal|")"
+argument_list|)
+argument_list|,
+literal|"//long[@name='noval_if']='-99'"
+argument_list|,
+literal|"//long[@name='noval_def']='-99'"
+argument_list|,
+literal|"//bool[@name='noval_not']='true'"
+argument_list|,
+literal|"//bool[@name='noval_exists']='false'"
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 block|}
 end_class
 
